[package]
name = "rothschild"
description = "Jio Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jio-addresses.workspace = true
jio-consensus-core.workspace = true
jio-core.workspace = true
jio-grpc-client.workspace = true
jio-notify.workspace = true
jio-rpc-core.workspace = true
jio-txscript.workspace = true
jio-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
