[package]
name = "simpa"
description = "Jio Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jio-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
jio-consensus-core.workspace = true
jio-consensus-notify.workspace = true
jio-consensus.workspace = true
jio-core.workspace = true
jio-database.workspace = true
jio-hashes.workspace = true
jio-perf-monitor.workspace = true
jio-utils.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "jio-alloc/heap"]
semaphore-trace = ["jio-utils/semaphore-trace"]
