[package]
name = "jio-rpc-core"
description = "Jio RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "jio-consensus-client/wasm32-sdk",
    "jio-consensus-wasm/wasm32-sdk"
]

[dependencies]
jio-addresses.workspace = true
jio-consensus-core.workspace = true
jio-consensus-client.workspace = true
jio-consensus-notify.workspace = true
jio-consensus-wasm.workspace = true
jio-core.workspace = true
jio-hashes.workspace = true
jio-index-core.workspace = true
jio-math.workspace = true
jio-mining-errors.workspace = true
jio-notify.workspace = true
jio-txscript.workspace = true
jio-utils.workspace = true
jio-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
