[package]
name = "jio-wallet-pskt"
keywords = ["jio", "wallet", "pskt", "psbt", "bip-370"]
description = "Partially Signed Jio Transaction"
categories = ["cryptography::cryptocurrencies"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
wasm32-sdk = ["jio-consensus-client/wasm32-sdk"]
wasm32-types = ["jio-consensus-client/wasm32-types"]

[dependencies]
jio-addresses.workspace = true
jio-bip32.workspace = true
jio-consensus-client.workspace = true
jio-consensus-core.workspace = true
jio-txscript-errors.workspace = true
jio-txscript.workspace = true
jio-utils.workspace = true

bincode.workspace = true
derive_builder.workspace = true
js-sys.workspace = true
futures.workspace = true
hex.workspace = true
secp256k1.workspace = true
serde_repr.workspace = true
serde-value.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true
