[package]
name = "jio-grpc-server"
description = "Jio gRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jio-consensus-core.workspace = true
jio-core.workspace = true
jio-grpc-core.workspace = true
jio-notify.workspace = true
jio-rpc-core.workspace = true
jio-rpc-macros.workspace = true
jio-rpc-service.workspace = true
jio-utils-tower.workspace = true
jio-utils.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["gzip"] }
triggered.workspace = true
uuid.workspace = true
rustls.workspace = true

[dev-dependencies]
jio-grpc-client.workspace = true
