[package]
name = "jio-wrpc-proxy"
description = "Jio wRPC to gRPC proxy"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
jio-consensus-core.workspace = true
jio-grpc-client.workspace = true
jio-rpc-core.workspace = true
jio-rpc-macros.workspace = true
jio-wrpc-server.workspace = true
num_cpus.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true

[package.metadata.emanate.build]
folder = "setup"
