[package]
name = "jio-wrpc-server"
description = "Jio wRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait.workspace = true
borsh = { workspace = true, features = ["rc"] }
futures.workspace = true
jio-consensus-core.workspace = true
jio-core.workspace = true
jio-grpc-client.workspace = true
jio-notify.workspace = true
jio-rpc-core.workspace = true
jio-rpc-macros.workspace = true
jio-rpc-service.workspace = true
jio-utils.workspace = true
log.workspace = true
num_cpus.workspace = true
paste.workspace = true
serde = { workspace = true, features = ["rc"] }
thiserror.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
workflow-serializer.workspace = true
rustls.workspace = true