[package]
name = "jio-wrpc-wasm"
description = "Jio wRPC WASM client"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = ["jio-wrpc-client/wasm32-sdk"]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ahash.workspace = true
async-std.workspace = true
cfg-if.workspace = true
jio-addresses.workspace = true
jio-consensus-core.workspace = true
jio-consensus-client.workspace = true
jio-consensus-wasm.workspace = true
jio-notify.workspace = true
jio-wrpc-client.workspace = true
jio-rpc-core.workspace = true
jio-rpc-macros.workspace = true
jio-wasm-core.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
workflow-wasm.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
workflow-core.workspace = true
futures.workspace = true
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }

[lints]
workspace = true
